deleted deprecated methods in UsageModel